--- a/app/src/main/res/layout/activity_contact_support.xml
+++ b/app/src/main/res/layout/activity_contact_support.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -6,13 +7,13 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fillViewport="true"
-    tools:context=".Profile.ContactSupport">
+    android:background="@color/grayish_blue1">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/grayish_blue1"
         tools:context=".Profile.ContactSupport">
+
 
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/appBarLayout"
@@ -49,6 +50,7 @@
             android:id="@+id/textVi"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
             android:fontFamily="@font/poppins_semibold"
             android:text="always."
             android:textColor="@color/dark_blue"
@@ -59,22 +61,316 @@
             app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
         <com.google.android.material.card.MaterialCardView
-            android:id="@+id/materialCardView"
-            android:layout_width="310dp"
-            android:layout_height="534dp"
-            android:layout_marginLeft="50dp"
-            android:layout_marginTop="196dp"
-            android:layout_marginRight="50dp"
-            app:cardBackgroundColor="@color/yellow"
+            android:id="@+id/cardY"
+            android:layout_width="350dp"
+            android:layout_height="520dp"
+            android:layout_marginTop="12dp"
+            app:cardBackgroundColor="@color/dark_blue"
             app:cardCornerRadius="15dp"
             app:cardElevation="12dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.353"
+            app:layout_constraintHorizontal_bias="0.491"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toBottomOf="@id/textVi">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/firstP"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:textSize="16sp"
+                android:text="Please contact us if there is anything wrong with the car or the host.
+We are always available to assist you with rebooking, refunds, and any such issues.\n\nWhen the TARA app isn't working properly, try the following:
+\n\n(1) Make sure you have the most recent version of the program.\n(2) Verify that your internet connection is operational.\n(3) Try restarting or reinstalling the app.\n(4) Login out of your account and then sign back in.\n(5) Verify that location permission is granted.\n\nIf the issue persists, please take a snapshot of the error message, or record your screen and submit it to"
+                android:textColor="@color/white">
+            </TextView>
+
+            <TextView
+                android:id="@+id/emailTara"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:textSize="16sp"
+                android:textColor="@color/white"
+                android:text="tara.vehiclerentalapp2022@gmail.com">
+
+            </TextView>
+            <TextView
+
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="10dp"
+                android:textSize="16sp"
+                android:textColor="@color/white"
+                android:text="We may need additional information from you to assist you further.">
+
+            </TextView>
+        </LinearLayout>
+
 
 
         </com.google.android.material.card.MaterialCardView>
 
+        <TextView
+            android:id="@+id/ourTeam"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:fontFamily="@font/poppins_semibold"
+            android:text="Our Team"
+            android:textColor="@color/dark_blue"
+            android:textSize="25sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/cardY" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout></ScrollView>
+        <HorizontalScrollView
+            android:layout_width="match_parent"
+            android:layout_height="400dp"
+            android:layout_marginTop="50dp"
+            app:layout_constraintTop_toBottomOf="@+id/ourTeam"
+            android:layout_marginLeft="40dp"
+            android:layout_marginRight="20dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <com.google.android.material.card.MaterialCardView
+                    android:layout_width="320dp"
+                    android:layout_height="320dp"
+                    app:cardCornerRadius="20dp"
+                    app:cardElevation="12dp">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:gravity="center">
+                        <ImageView
+                            android:src="@drawable/team1"
+                            android:layout_width="150dp"
+                            android:layout_height="150dp"
+                            />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Kier Matthew Encarnacion"
+                            android:textColor="@color/dark_blue"
+                            android:textSize="18sp">
+                        </TextView>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Coder"
+                            android:textColor="@color/dark_blue"
+                            android:textSize="18sp">
+                        </TextView>
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            >
+                            <ImageView
+                                android:src="@drawable/logo_facebook"
+                                android:layout_width="50dp"
+                                android:layout_height="50dp"
+                                android:layout_marginRight="10dp">
+                            </ImageView>
+                            <ImageView
+                                android:src="@drawable/logo_github"
+                                android:layout_width="50dp"
+                                android:layout_height="50dp">
+                            </ImageView>
+                        </LinearLayout>
+
+
+
+
+                    </LinearLayout>
+                </com.google.android.material.card.MaterialCardView>
+
+                <com.google.android.material.card.MaterialCardView
+                    android:layout_width="320dp"
+                    android:layout_height="320dp"
+                    app:cardCornerRadius="20dp"
+                    app:cardElevation="12dp"
+                    android:layout_marginLeft="30dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:gravity="center">
+
+                        <ImageView
+                            android:src="@drawable/team2"
+                            android:layout_width="150dp"
+                            android:layout_height="150dp"
+                            android:layout_marginTop="20dp"
+                            />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Hazel Anne Caringal"
+                            android:textColor="@color/dark_blue"
+                            android:gravity="center"
+                            android:textSize="18sp">
+                        </TextView>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="UI Designer"
+                            android:textColor="@color/dark_blue"
+                            android:textSize="18sp">
+                        </TextView>
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            >
+                            <ImageView
+                                android:src="@drawable/logo_facebook"
+                                android:layout_width="50dp"
+                                android:layout_height="50dp"
+                                android:layout_marginRight="10dp">
+                            </ImageView>
+                            <ImageView
+                                android:src="@drawable/logo_github"
+                                android:layout_width="50dp"
+                                android:layout_height="50dp">
+                            </ImageView>
+                        </LinearLayout>
+
+
+
+                    </LinearLayout>
+                </com.google.android.material.card.MaterialCardView>
+
+                <com.google.android.material.card.MaterialCardView
+                    android:layout_width="320dp"
+                    android:layout_height="320dp"
+                    app:cardCornerRadius="20dp"
+                    app:cardElevation="12dp"
+                    android:layout_marginLeft="30dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:gravity="center">
+
+                        <ImageView
+                            android:src="@drawable/team3"
+                            android:layout_width="150dp"
+                            android:layout_height="150dp"
+                            android:layout_marginTop="20dp"
+                            />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Renz Brian Matias"
+                            android:textColor="@color/dark_blue"
+                            android:gravity="center"
+                            android:textSize="18sp">
+                        </TextView>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Coder"
+                            android:textColor="@color/dark_blue"
+                            android:textSize="18sp">
+                        </TextView>
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            >
+                            <ImageView
+                                android:src="@drawable/logo_facebook"
+                                android:layout_width="50dp"
+                                android:layout_height="50dp"
+                                android:layout_marginRight="10dp">
+                            </ImageView>
+                            <ImageView
+                                android:src="@drawable/logo_github"
+                                android:layout_width="50dp"
+                                android:layout_height="50dp">
+                            </ImageView>
+                        </LinearLayout>
+                    </LinearLayout>
+                </com.google.android.material.card.MaterialCardView>
+
+
+
+
+                <com.google.android.material.card.MaterialCardView
+                    android:layout_width="320dp"
+                    android:layout_height="320dp"
+                    app:cardCornerRadius="20dp"
+                    app:cardElevation="12dp"
+                    android:layout_marginLeft="30dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical"
+                        android:gravity="center">
+
+                        <ImageView
+                            android:src="@drawable/team4"
+                            android:layout_width="150dp"
+                            android:layout_height="150dp"
+                            android:layout_marginTop="20dp"
+                            />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Reycel Castillo"
+                            android:textColor="@color/dark_blue"
+                            android:gravity="center"
+                            android:textSize="18sp">
+                        </TextView>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="UI Designer"
+                            android:textColor="@color/dark_blue"
+                            android:textSize="18sp">
+                        </TextView>
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            >
+                            <ImageView
+                                android:src="@drawable/logo_facebook"
+                                android:layout_width="50dp"
+                                android:layout_height="50dp"
+                                android:layout_marginRight="10dp">
+                            </ImageView>
+                            <ImageView
+                                android:src="@drawable/logo_github"
+                                android:layout_width="50dp"
+                                android:layout_height="50dp">
+                            </ImageView>
+                        </LinearLayout>
+                    </LinearLayout>
+                </com.google.android.material.card.MaterialCardView>
+
+            </LinearLayout>
+
+
+        </HorizontalScrollView>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
