--- a/app/src/main/res/layout/activity_login_signup.xml
+++ b/app/src/main/res/layout/activity_login_signup.xml
@@ -42,10 +42,11 @@
         android:layout_marginTop="100dp"
         android:layout_marginRight="50dp"
         android:background="@drawable/btn_login_signup"
+        android:backgroundTint="@color/yellow"
         android:fontFamily="@font/poppins_bold"
         android:paddingTop="5dp"
         android:text="Login"
-        android:textColor="@color/dark_blue"
+        android:textColor="@color/yellow"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
