--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,6 +25,7 @@
             android:text="Login"
             android:textColor="@color/white"
             android:textSize="50dp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.19"
             app:layout_constraintStart_toStartOf="parent"
@@ -83,7 +84,7 @@
             app:layout_constraintEnd_toEndOf="@+id/passwordLogin"
             app:layout_constraintTop_toBottomOf="@+id/passwordLogin" />
 
-        <Button
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/loginBtn"
             android:layout_width="match_parent"
             android:layout_height="50dp"
@@ -92,6 +93,7 @@
             android:layout_marginRight="50dp"
             android:fontFamily="@font/poppins_bold"
             android:text="Login"
+            android:textStyle="bold"
             android:textColor="@color/dark_blue"
             android:textSize="16sp"
             android:paddingTop="5dp"
@@ -131,21 +133,28 @@
             app:layout_constraintStart_toStartOf="@+id/loginBtn"
             app:layout_constraintTop_toBottomOf="@+id/loginBtn" />
 
-        <Button
+
+        <androidx.cardview.widget.CardView
             android:id="@+id/loginGoogle"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginTop="25dp"
-            android:textSize="16sp"
-            android:background="@drawable/btn_google"
-            android:drawableStart="@drawable/ic_google"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:paddingTop="1dp"
+            app:cardCornerRadius="10dp"
             app:layout_constraintEnd_toEndOf="@+id/textView2"
             app:layout_constraintStart_toStartOf="@+id/textView2"
             app:layout_constraintTop_toBottomOf="@+id/textView2">
-        </Button>
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="5dp"
+                android:background="@color/white"
+                android:src="@drawable/ic_google"
+                >
+            </ImageView>
+
+        </androidx.cardview.widget.CardView>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
