--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -24,6 +24,7 @@
             android:text="Sign Up"
             android:textColor="@color/white"
             android:textSize="50sp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.239"
             app:layout_constraintStart_toStartOf="parent"
@@ -112,7 +113,8 @@
             app:layout_constraintStart_toStartOf="@+id/passwordSignup"
             app:layout_constraintTop_toBottomOf="@+id/passwordSignup" />
 
-        <Button
+
+        <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/signupBtn"
             android:layout_width="match_parent"
             android:layout_height="50dp"
@@ -120,15 +122,16 @@
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
             android:fontFamily="@font/poppins_bold"
-            android:text="Sign Up"
+            android:text="Sign up"
             android:textColor="@color/dark_blue"
             android:textSize="16sp"
-            android:paddingTop="6dp"
+            android:textStyle="bold"
+            android:paddingTop="5dp"
             android:background="@drawable/btn_login_signup"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.495"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/confirmPassword" />
+            app:layout_constraintTop_toBottomOf="@+id/confirmPassword"  />
 
         <TextView
             android:id="@+id/textView2"
@@ -144,21 +147,26 @@
             app:layout_constraintStart_toStartOf="@+id/signupBtn"
             app:layout_constraintTop_toBottomOf="@+id/signupBtn" />
 
-        <Button
+        <androidx.cardview.widget.CardView
             android:id="@+id/loginGoogle"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_marginTop="25dp"
-            android:textSize="16sp"
-            android:background="@drawable/btn_google"
-            android:drawableStart="@drawable/ic_google"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:paddingTop="1dp"
-
+            app:cardCornerRadius="10dp"
             app:layout_constraintEnd_toEndOf="@+id/textView2"
             app:layout_constraintStart_toStartOf="@+id/textView2"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" />
+            app:layout_constraintTop_toBottomOf="@+id/textView2">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_margin="5dp"
+                android:background="@color/white"
+                android:src="@drawable/ic_google"
+                >
+            </ImageView>
+
+        </androidx.cardview.widget.CardView>
 
         <TextView
             android:id="@+id/alreadyHaveAcc"
